IT대 근처 계단 및 경사로 표시 마무리

--- a/src/main/resources/templates/progreen/index.html
+++ b/src/main/resources/templates/progreen/index.html
@@ -638,7 +638,291 @@
     // 지도에 선을 표시합니다
     polyline27.setMap(map);
 
-    //
+    //봉사관 우측 평지 path28
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath28 = [
+        new kakao.maps.LatLng(35.8870769785086, 128.61021324916467),
+        new kakao.maps.LatLng(35.88643077268936, 128.6101863217578)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline28 = new kakao.maps.Polyline({
+        path: linePath28, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline28.setMap(map);
+
+    //더쪽 북측 코너 path29
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath29 = [
+        new kakao.maps.LatLng(35.88643077268936, 128.6101863217578),
+        new kakao.maps.LatLng(35.88637593968739, 128.61024334834576)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline29 = new kakao.maps.Polyline({
+        path: linePath29, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline29.setMap(map);
+
+    //쪽문 북측 평지 path30
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath30 = [
+        new kakao.maps.LatLng(35.88637593968739, 128.61024334834576),
+        new kakao.maps.LatLng(35.88635502692364, 128.61096271476092)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline30 = new kakao.maps.Polyline({
+        path: linePath30, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline30.setMap(map);
+
+    //창업보육센터 북측 코너 평지 path31
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath31 = [
+        new kakao.maps.LatLng(35.886596731930986, 128.6125926801426),
+        new kakao.maps.LatLng(35.88655531467312, 128.61248940836475)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline31 = new kakao.maps.Polyline({
+        path: linePath31, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline31.setMap(map);
+
+    //창업보육센터 북측 일자 평지 path32
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath32 = [
+        new kakao.maps.LatLng(35.88655531467312, 128.61248940836475),
+        new kakao.maps.LatLng(35.886563401047404, 128.61205492895616)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline32 = new kakao.maps.Polyline({
+        path: linePath32, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline32.setMap(map);
+
+    //학생주차장 남측 일자 평지1 path33
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath33 = [
+        new kakao.maps.LatLng(35.8885665926988, 128.6116885713173),
+        new kakao.maps.LatLng(35.888022097367006, 128.61264373441736)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline33 = new kakao.maps.Polyline({
+        path: linePath33, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline33.setMap(map);
+
+    //학생주차장 남측 일자 평지2 path34
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath34 = [
+        new kakao.maps.LatLng(35.888022097367006, 128.61264373441736),
+        new kakao.maps.LatLng(35.88750216247151, 128.61344711745116)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline34 = new kakao.maps.Polyline({
+        path: linePath34, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline34.setMap(map);
+
+    //IT1호관 앞 곡선 도로1 path35
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath35 = [
+        new kakao.maps.LatLng(35.88728907184805, 128.61321024357107),
+        new kakao.maps.LatLng(35.88750216247151, 128.61344711745116)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline35 = new kakao.maps.Polyline({
+        path: linePath35, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline35.setMap(map);
+
+    //IT1호관 앞 곡선 도로2 path36
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath36 = [
+        new kakao.maps.LatLng(35.88728907184805, 128.61321024357107),
+        new kakao.maps.LatLng(35.88710201923858, 128.61287977192111)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline36 = new kakao.maps.Polyline({
+        path: linePath36, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline36.setMap(map);
+
+    //IT1호관 앞 곡선 도로3 path37
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath37 = [
+        new kakao.maps.LatLng(35.887044241866, 128.61282046264768),
+        new kakao.maps.LatLng(35.88710201923858, 128.61287977192111)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline37 = new kakao.maps.Polyline({
+        path: linePath37, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline37.setMap(map);
+
+    //IT1호관 앞 곡선 도로4 path38
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath38 = [
+        new kakao.maps.LatLng(35.886963533249634, 128.61279114124906),
+        new kakao.maps.LatLng(35.887044241866, 128.61282046264768)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline38 = new kakao.maps.Polyline({
+        path: linePath38, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline38.setMap(map);
+
+    //IT1호관 앞 곡선 도로5 path39
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath39 = [
+        new kakao.maps.LatLng(35.886963533249634, 128.61279114124906),
+        new kakao.maps.LatLng(35.88666549518675, 128.61284046511398)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline39 = new kakao.maps.Polyline({
+        path: linePath39, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline39.setMap(map);
+
+    //IT1호관 앞 곡선 도로6 path40
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath40 = [
+        new kakao.maps.LatLng(35.886575443083814, 128.6128358702094),
+        new kakao.maps.LatLng(35.88666549518675, 128.61284046511398)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline40 = new kakao.maps.Polyline({
+        path: linePath40, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline40.setMap(map);
+
+    //IT1호관 앞 곡선 도로7 path41
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath41 = [
+        new kakao.maps.LatLng(35.886575443083814, 128.6128358702094),
+        new kakao.maps.LatLng(35.88648325026572, 128.61282292662233)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline41 = new kakao.maps.Polyline({
+        path: linePath41, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline41.setMap(map);
+
+    //공식당 옆 평지 path42
+    // 선을 구성하는 좌표 배열입니다. 이 좌표들을 이어서 선을 표시합니다
+    var linePath42 = [
+        new kakao.maps.LatLng(35.888868154411114, 128.60936082969613),
+        new kakao.maps.LatLng(35.88872670874402, 128.60932474472875)
+    ];
+
+    // 지도에 표시할 선을 생성합니다
+    var polyline42 = new kakao.maps.Polyline({
+        path: linePath42, // 선을 구성하는 좌표배열 입니다
+        strokeWeight: 5, // 선의 두께 입니다
+        strokeColor: '#126006', // 선의 색깔입니다
+        strokeOpacity: 0.7, // 선의 불투명도 입니다 1에서 0 사이의 값이며 0에 가까울수록 투명합니다
+        strokeStyle: 'solid' // 선의 스타일입니다
+    });
+
+    // 지도에 선을 표시합니다
+    polyline42.setMap(map);
+
 
 </script>
 </body>
